--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@park-ui/tailwind-plugin": "^0.20.1",
