--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ark-ui/react": "^3.5.0",
+    "@radix-ui/colors": "^3.0.0",
     "culori": "^4.0.1",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
