--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "dependencies": {
     "@ark-ui/react": "^3.5.0",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "culori": "^4.0.1",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
@@ -22,7 +30,6 @@
   },
   "devDependencies": {
     "@park-ui/tailwind-plugin": "^0.20.1",
-        "daisify-shadcn": "^0.0.1",
     "@types/culori": "^2.1.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -30,6 +37,7 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "daisify-shadcn": "^0.0.1",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
