--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@redux-devtools/extension": "^3.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "culori": "^4.0.1",
@@ -26,7 +27,8 @@
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@park-ui/tailwind-plugin": "^0.20.1",
