add tanstack router

--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@redux-devtools/extension": "^3.3.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "culori": "^4.0.1",
-    "lucide-react": "^0.408.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.4.0",
-    "tailwind-variants": "^0.2.1",
-    "theme-change": "^2.5.0",
-    "zustand": "^4.5.4"
-  },
-  "devDependencies": {
+        "@tanstack/react-router": "^1.43.6",
+        "clsx": "^2.1.1",
+        "culori": "^4.0.1",
+        "lucide-react": "^0.408.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "tailwind-merge": "^2.4.0",
+        "tailwind-variants": "^0.2.1",
+        "theme-change": "^2.5.0",
+        "zod": "^3.23.8",
+        "zustand": "^4.5.4"
+      },
+      "devDependencies": {
+    "@tanstack/router-devtools": "^1.43.6",
+    "@tanstack/router-vite-plugin": "^1.43.9",
     "@park-ui/tailwind-plugin": "^0.20.1",
     "@types/culori": "^2.1.1",
     "@types/react": "^18.3.3",
