--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ark-ui/react": "^3.5.0",
+    "@builtwithjavascript/oklch-color-picker": "^0.9.1",
+    "@builtwithjavascript/oklch-converter": "^0.9.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -19,25 +21,28 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@redux-devtools/extension": "^3.3.0",
+    "@tanstack/react-router": "^1.43.6",
     "class-variance-authority": "^0.7.0",
-        "@tanstack/react-router": "^1.43.6",
-        "clsx": "^2.1.1",
-        "culori": "^4.0.1",
-        "lucide-react": "^0.408.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "tailwind-merge": "^2.4.0",
-        "tailwind-variants": "^0.2.1",
-        "theme-change": "^2.5.0",
-        "zod": "^3.23.8",
-        "zustand": "^4.5.4"
-      },
-      "devDependencies": {
+    "clsx": "^2.1.1",
+    "culori": "^4.0.1",
+    "lucide-react": "^0.408.0",
+    "picocolors": "^1.0.1",
+    "react": "^18.3.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
+    "theme-change": "^2.5.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
+  },
+  "devDependencies": {
+    "@park-ui/tailwind-plugin": "^0.20.1",
     "@tanstack/router-devtools": "^1.43.6",
     "@tanstack/router-vite-plugin": "^1.43.9",
-    "@park-ui/tailwind-plugin": "^0.20.1",
     "@types/culori": "^2.1.1",
     "@types/react": "^18.3.3",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
